methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:2: error: '(' expected but identifier found.
  for i in range(i <- 1 to 4){
      ^MethodsDogHouse:7: error: illegal start of simple expression
}
^