methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  for i in range(i <- 1 to 4){
    avance()
    avance()
    gauche()
  }
}
